--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.5.7
+  dio: ^3.0.9
+  flutter_screenutil: ^1.0.2
+  carousel_slider: ^2.0.0
 
 dev_dependencies:
   flutter_test:
